--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -1,11 +1,20 @@
-FROM python:3.8
+FROM ubuntu:20.04
 
 WORKDIR /app
 COPY . /app
-RUN pip install -r requirements.txt
 
+RUN apt-get update -y
 RUN apt-get install -y locales
 RUN locale-gen "es_ES.UTF-8"
 RUN update-locale LC_ALL="es_ES.UTF-8"
+RUN dpkg-reconfigure locales
 
-CMD [ "python", "pipeline.py" ]
+RUN apt install tzdata -y
+ENV TZ="America/Santiago"
+
+RUN apt-get install -y python3
+RUN apt-get install -y python3-pip
+
+RUN pip3 install -r requirements.txt
+
+CMD [ "python3", "pipeline.py" ]
